Logstash conf backup

--- a/TestConfig.conf
+++ b/TestConfig.conf
@@ -35,7 +35,7 @@ filter{
 		add_field => {"pages" => "%{doc[book][otherInfo][page]}" }
 	}
 	ruby {
-		code => "event.set('Shelf', (event.get('bkId').to_i % 2 == 1 ? 1 : 2));
+		code => "event.set('Shelf', 2-(event.get('bkId').to_i % 2));
 			convertedId = event.get('bkId').rjust(10,'0');
 			event.set('bkId', event.get('prefix')+'-'+convertedId);"
 	}
